# quantbt

./: .gitignore  README.md  pyproject.toml
config/: default.toml
scripts/: run_backtest.py  run_live.py
src/quantbt/: __init__.py
src/quantbt/broker/: base.py  live.py  simulated.py
src/quantbt/core/: clock.py  config.py  engine.py  logging.py
src/quantbt/data/: bar.py  base.py  ccxt_feed.py  csv_feed.py  yahoo.py
src/quantbt/indicators/: __init__.py  base.py  moving_averages.py  oscillators.py  vectorized.py  volatility.py  volume.py
src/quantbt/instrument/: model.py
src/quantbt/messaging/: fix_messages_pb2.py  protocol.py  zmq_client.py
src/quantbt/optimization/: __init__.py  bias.py  optimizer.py  parameter.py  walk_forward.py
src/quantbt/orders/: model.py
src/quantbt/portfolio/: metrics.py  portfolio.py
src/quantbt/strategy/: base.py  multi_instrument.py  vectorized.py
src/quantbt/strategy/examples/: pair_trading.py  sma_crossover.py  spread_arbitrage.py
tests/: conftest.py  test_bias.py  test_config.py  test_crypto.py  test_data.py  test_engine.py  test_indicators.py  test_instrument.py  test_integration.py  test_messaging.py  test_metrics.py  test_multi_instrument.py  test_optimization.py  test_pair_trading.py  test_portfolio.py  test_strategy.py
