[project]
name = "quantbt"
version = "0.1.0"
description = "Backtesting and strategy engine for multi-asset trading"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyzmq>=25.1",
    "yfinance>=0.2.31",
    "pydantic>=2.5",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
]
alphavantage = [
    "alpha-vantage>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantbt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
